2010-06-18  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/user_list.php: Merged fix from
	trunk. Fixed the bug of delete agents in IExplorer
	and added deleted confirm for bug: 3017261

2010-06-17  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/map_builder.php: Merged fix from trunk
	for bug 3017262

2010-05-05 Miguel de Dios  <miguel.dedios@artica.es>

	Merged from trunk:
	
	* images/custom_logo/sourceforge.jpg,
	images/custom_logo/pandora_logo_head.jpg, images/custom_logo/none.jpg: added
	the version in jpeg of files for PDF reports.

2010-06-14  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.php: Merged fixed 
	from trunk

2010-06-09  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js: fixed lost semi colon.
	
	* godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/reporting_builder.item_editor.php: fixed lost include
	autocomplete javascript file.
	
	Fixes: #3013425

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* general/license/pandora_info_pt_BR.html,
	  general/license/pandora_info_es.html,
	  general/license/pandora_info_ast.html: Added to repository.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* general/license/pandora_info_ast_es.html,
	  general/license/pandora_info_es_es.html,
	  general/license/pandora_info_es_la.html,
	  general/license/pandora_info_pt_br.html: Removed from repository.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* general/footer.php: Show the English license if a localized version
	  is not available.

2010-06-09  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/agent_manager.php: Fixed the agent icons on 
	agent setup for bug: 3013426

2010-06-09  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/module_manager_editor_wmi.php: Added missing '_'.

2010-06-08  Raúl Mateos <raulofpandora@gmail.com>

	* operation/incidents/incident_detail.php,