@@ -1,3 +1,8 @@
+2010-06-23  Ramon Novoa  <rnovoa@artica.es>
+
+	* include/fgraph.php: Continue drawing combined charts if modules
+	  without data are found.
+
 2010-06-18  Sergio Martin <sergio.martin@artica.es>
 
 	* godmode/users/user_list.php: Merged fix from
